--- a/index.html
+++ b/index.html
@@ -9,22 +9,21 @@
         body { font-family: "Microsoft JhengHei", sans-serif; background-color: var(--soft-bg); margin: 0; display: flex; justify-content: center; min-height: 100vh; }
         .container { width: 100%; max-width: 480px; background: white; display: flex; flex-direction: column; box-shadow: 0 0 20px rgba(0,0,0,0.05); }
         .nav-tabs { display: flex; background: #fff; padding: 15px 5px; justify-content: space-around; border-bottom: 1px solid #eee; }
-        .nav-item { text-align: center; text-decoration: none; color: #888; font-size: 0.8rem; flex: 1; }
+        .nav-item { text-align: center; text-decoration: none; color: #888; font-size: 0.8rem; flex: 1; cursor: pointer; }
         .nav-item.active { color: var(--deep-pink); font-weight: bold; }
-        .main-content { padding: 40px 20px; flex: 1; }
-        .header { text-align: center; margin-bottom: 30px; }
+        .main-content { padding: 40px 20px; flex: 1; text-align: center; }
         .header h1 { color: var(--deep-pink); font-size: 1.8rem; margin: 0; letter-spacing: 2px; }
-        .search-group { display: flex; background: #fff; border: 2px solid var(--angel-pink); border-radius: 50px; padding: 5px; box-shadow: 0 4px 15px rgba(255, 182, 193, 0.2); margin-bottom: 25px;}
-        .search-group input { flex: 1; border: none; padding: 12px 15px; border-radius: 50px; outline: none; font-size: 1rem; min-width: 0; }
-        .ask-btn { background: var(--deep-pink); color: white; border: none; padding: 10px 25px; border-radius: 50px; cursor: pointer; font-weight: bold; }
-        #loading { display: none; text-align: center; color: var(--deep-pink); margin: 20px 0; }
+        .search-group { display: flex; background: #fff; border: 2px solid var(--angel-pink); border-radius: 50px; padding: 5px; box-shadow: 0 4px 15px rgba(255, 182, 193, 0.2); margin: 25px 0; }
+        .search-group input { flex: 1; border: none; padding: 12px 15px; border-radius: 50px; outline: none; font-size: 1rem; width: 100%; }
+        .ask-btn { background: var(--deep-pink); color: white; border: none; padding: 10px 25px; border-radius: 50px; cursor: pointer; font-weight: bold; white-space: nowrap; }
+        #loading { display: none; color: var(--deep-pink); margin: 20px 0; font-weight: bold; }
         #response-panel { display: none; animation: fadeIn 0.5s ease; }
-        .angel-talk { background: #fffafb; padding: 25px; border-radius: 20px; line-height: 1.8; border-left: 6px solid var(--deep-pink); margin-bottom: 20px; color: #444; font-size: 1.05rem; white-space: pre-wrap; text-align: left; }
+        .angel-talk { background: #fffafb; padding: 25px; border-radius: 20px; line-height: 1.8; border-left: 6px solid var(--deep-pink); margin-bottom: 20px; color: #444; font-size: 1.1rem; white-space: pre-wrap; text-align: left; box-shadow: 0 4px 10px rgba(0,0,0,0.02); }
         .btn-group { display: flex; flex-direction: column; gap: 12px; }
-        .btn { padding: 15px; border-radius: 15px; text-align: center; text-decoration: none; font-weight: bold; border: none; cursor: pointer; font-size: 1rem; }
+        .btn { padding: 15px; border-radius: 15px; text-align: center; text-decoration: none; font-weight: bold; border: none; cursor: pointer; font-size: 1rem; transition: 0.3s; }
         .btn-nav { background: var(--deep-pink); color: white; }
         .btn-sutra { background: #fff; color: var(--deep-pink); border: 2px dashed var(--angel-pink); }
-        .footer { text-align: center; padding: 40px 20px; font-size: 0.8rem; color: #bbb; line-height: 1.8; border-top: 1px solid #f9f9f9; }
+        .footer { text-align: center; padding: 40px 20px; font-size: 0.85rem; color: #999; line-height: 1.8; border-top: 1px solid #f9f9f9; }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
@@ -35,9 +34,12 @@
         <div class="nav-item active">🧠<br>智多星</div><div class="nav-item">✨<br>關於</div>
     </div>
     <div class="main-content">
-        <div class="header"><h1>幸福智多星</h1><p>與笑長雲端智慧連線中</p></div>
+        <div class="header">
+            <h1>幸福智多星</h1>
+            <p style="color: #666;">與笑長雲端智慧實時連線中</p>
+        </div>
         <div class="search-group">
-            <input type="text" id="userInput" placeholder="輸入：愛生氣、吼叫、不專心...">
+            <input type="text" id="userInput" placeholder="輸入：愛生氣、吼叫、手足衝突...">
             <button class="ask-btn" onclick="fetchFromCloud()">詢問</button>
         </div>
         <div id="loading">✨ 小天使正在翻閱雲端經書...</div>
@@ -51,7 +53,7 @@
     </div>
     <div class="footer">
         © 2026 幸福教養概念館<br>
-        小天使是學校寶貝的大朋友和家裡的幸福姑<br>
+        小天使是退休國小教師，也是學校寶貝的大朋友和家裡的幸福姑<br>
         家長的正能量女神 · 也是笑口常開的笑長
     </div>
 </div>
@@ -74,9 +76,9 @@
             const response = await fetch(API_URL);
             const data = await response.json();
             
-            // 找出關鍵字匹配的那一行
+            // 【終極修正】不再依賴欄位名稱，改用「內容特徵」尋找
             const match = data.find(row => {
-                const rowValues = Object.values(row).join("");
+                const rowValues = Object.values(row).join(" ");
                 return rowValues.includes(input);
             });
 
@@ -84,37 +86,28 @@
             panel.style.display = "block";
 
             if (match) {
-                // 【核心修正】智慧掃描：找出這行裡面字數最長的那一格（就是笑長的長文）
                 const values = Object.values(match);
-                let longestText = "";
-                let targetPage = "幸福展廳";
-                let toolLink = "";
+                // 找出最長的一段文字作為解決方案 (B欄特性)
+                let mainContent = values.reduce((a, b) => a.length > b.toString().length ? a : b.toString(), "");
+                voice.innerText = mainContent;
 
-                values.forEach(val => {
-                    const text = val.toString();
-                    // 只要字數超過 10 個字，通常就是解決方案
-                    if (text.length > longestText.length && !text.startsWith("http")) {
-                        longestText = text;
-                    }
-                    // 尋找網址
-                    if (text.startsWith("http")) toolLink = text;
-                    // 尋找分頁名稱 (通常是 2-5 個字)
-                    if (text.includes("展廳") || text.includes("會所") || text.includes("心靈")) targetPage = text;
-                });
+                // 尋找目標分頁 (包含展廳、會所字眼)
+                const pageName = values.find(v => v.toString().includes("展廳") || v.toString().includes("會所")) || "幸福展廳";
+                navBtn.innerText = `🎬 前往 ${pageName}`;
 
-                voice.innerText = longestText || "天使笑長懂您的心，正為您準備智慧對策。";
-                navBtn.innerText = `🎬 前往 ${targetPage}`;
+                // 尋找網址 (G欄特性)
+                const url = values.find(v => v.toString().startsWith("http"));
                 navBtn.onclick = () => {
-                    if (toolLink) window.location.href = toolLink;
+                    if (url) window.location.href = url;
                     else alert("此內容正在趕路中，請先讀讀幸福經喔！");
                 };
             } else {
-                voice.innerText = "笑長溫柔地聽著... 雲端尚未收錄此煩惱。試試搜尋「愛生氣」測試連線！";
+                voice.innerText = "笑長溫柔地聽著您的煩惱... 雲端經書目前尚未收錄此關鍵字。您可以試試輸入「生氣」或「吼叫」來測試連線！";
                 navBtn.innerText = "🎬 參觀幸福展廳";
-                navBtn.onclick = () => alert("導覽至展廳...");
+                navBtn.onclick = () => alert("導航至全館展廳...");
             }
         } catch (e) {
-            loading.innerText = "❌ 連線不順，請確認 API 權限。";
+            loading.innerText = "❌ 連線不順，請確認 API 部署為「所有人」皆可存取。";
         }
     }
 </script>
