--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div id="loading">🔮 智多星思考中...</div>
 
         <div id="response-panel">
-            <div id="resTitle" style="font-weight:bold; font-size:1.2rem; color:var(--deep-pink); margin-bottom:15px; text-align:center;">✨ 智多星雙效處方箋</div>
+            <div id="resTitle" style="font-weight:bold; font-size:1.2rem; color:var(--deep-pink); margin-bottom:15px; text-align:center;">✨ 智多星錦囊妙計</div>
             <div class="angel-talk" id="guidanceBox"></div> 
             <div class="video-box">
                 <button id="vBtn1" class="btn-v btn-soul" style="display:none;"></button>
