--- a/mastermind.html
+++ b/mastermind.html
@@ -80,8 +80,8 @@
 </div>
 
 <script>
-    // 已更新為笑長剛剛產生的最新網址
-    const API_URL = "https://script.google.com/macros/s/AKfycbyGOO6MvSHkVvZG3bbGC9dplnrAM6yi9rqgKGmNQS1RNWv071I30hhf9MxgzYRj2XGX/exec";
+    // 已更新為笑長剛剛產生的「新增部署」最新網址
+    const API_URL = "https://script.google.com/macros/s/AKfycbxkAkZQAsZ_4oWsrminSEA6l_2KCKEihyjYdR0oAa1oBfYJvexClGcvuMGcayxJ5bhF/exec";
     
     function quickSearch(word) { document.getElementById('userInput').value = word; fetchFromCloud(false); }
     
