--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
     const API_URL = "https://script.google.com/macros/s/AKfycby2XB5lJ1E72dO25yNtNpI9VOOGJkJXJfCbtCxT19oU1Be6E3RaUP4zzjsYkUjVGLNT/exec";
 
     const localJokes = [
-        "所謂的『優雅育兒』，就是你在心裡已經把孩子吊起來打了兩百次，但臉上依然保持微笑。",
+        "媽媽語重心長地對兒子說：「孩子，你要聽話，媽媽像你這麼大的時候，從來都不會頂撞父母。」
+兒子冷靜地看著媽媽說：「喔，那可能是因為妳那時候遇到的人比較好對付吧？",
+"所謂的『優雅育兒』，就是你在心裡已經把孩子吊起來打了兩百次，但臉上依然保持微笑。",
         "育兒就是一場長達 20 年的修行，孩子是你的業障，老公是你的考驗。",
         "如果你發現孩子突然安靜，趕快檢查鍵盤是不是少了好幾個鍵。",
         "當媽後最想念的地方不是百貨公司，而是沒有人在門口喊『媽～』的廁所。",
