--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         document.getElementById('res-state').innerText = s;
         document.getElementById('res-energy').innerText = e;
         document.getElementById('res-ritual').innerText = rituals[e] || "深呼吸三次。";
-        document.getElementById('res-quote').innerText = isP ? "「世界因我甜美，愛讓力量發生！」" : "「我有超級魔法，讓我可以做到！」";
+        document.getElementById('res-quote').innerText = isP ? "世界因我甜美，愛讓力量發生！" : "我有超級魔法，讓我可以做到！";
         
         document.querySelectorAll('.module-content').forEach(m => m.classList.remove('active'));
         document.getElementById('result-area').style.display = 'block';
